fixes images in media.html & fixed overflow for .partner in tables (added new span for text)

--- a/app/sass/_media.scss
+++ b/app/sass/_media.scss
@@ -31,6 +31,11 @@
             background: linear-gradient(0deg, rgba(5, 55, 134, 0.27), rgba(5, 55, 134, 0.27));
             pointer-events: none;
         }
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
     &_heading {
         color:$middleblue;
